--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -123,3 +123,7 @@
     }
 
 }
+
+#footer-nav-heading {
+    color: var(--footer-link-color);
+}
